--- a/test.html
+++ b/test.html
@@ -6,19 +6,11 @@
     </meta>
     <link rel="shortcut icon" href="./icon/favicon.png">
 
-    <!-- <title>ZAP - Creative Studio London</title> -->
-
     <title>TEST TEST TEST</title>
 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="reset-forms.css">
-
-    <link rel="stylesheet" href="fonts.css">
-    <link rel="stylesheet" href="headers.css">
-
+    <link rel="stylesheet" href="reset_all.css">
     <link rel="stylesheet" href="test.css">
-    <link rel="stylesheet" href="MediaQueries.css">
-
+    <!-- <link rel="stylesheet" href="MediaQueries.css"> -->
 
     <script src="test.js"></script>
 
@@ -30,6 +22,7 @@
 
     <header>
 
+        <!-- HMABURGER MENU -->
 
         <div id="hamburguer_menu" class="hamburguer_menu clickable" onclick="hamburger_menu(this)">
             <div class="bar1"></div>
@@ -111,12 +104,12 @@
 
                         <svg class="icon " viewBox="0 0 512 512">
                             <path d="M505,442.7L405.3,343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3,44-79.7,44-128C416,93.1,322.9,0,208,0S0,93.1,0,208                                        s93.1,208,208,208c48.3,0,92.7-16.4,128-44v16.3c0,6.4,2.5,12.5,7,17l99.7,99.7c9.4,9.4,24.6,9.4,33.9,0l28.3-28.3
-                                               C514.3,467.3,514.3,452.1,505,442.7z M208,336c-70.7,0-128-57.2-128-128c0-70.7,57.2-128,128-128c70.7,0,128,57.2,128,128
+                            C514.3,467.3,514.3,452.1,505,442.7z M208,336c-70.7,0-128-57.2-128-128c0-70.7,57.2-128,128-128c70.7,0,128,57.2,128,128
                                                C336,278.7,278.8,336,208,336z" />
                         </svg>
 
                     </div>
-                    
+
                 </nav>
 
             </div>
@@ -658,9 +651,10 @@
                         <h6 id="client_title">lord of casterly rock</h6>
                     </div>
 
-                    <div id="client_circle1" class="circle_deco clickable tostao_background " onmouseover="client1()">
+                    <div id="client_circle1" class="circle_deco clickable " onmouseover="client1()">
                     </div>
-                    <div id="client_circle2" class="circle_deco clickable" onmouseover="client2()"></div>
+                    <div id="client_circle2" class="circle_deco clickable  tostao_background" onmouseover="client2()">
+                    </div>
                     <div id="client_circle3" class="circle_deco clickable" onmouseover="client3()"></div>
 
                 </div>
@@ -704,7 +698,7 @@
                     <div class="hammers_deco"> <img src="./icon/hammers.png" alt="image-hammers"> </div>
 
                     <h6>
-                        let's tell your story 
+                        let's tell your story
                     </h6>
 
                 </div>
@@ -721,9 +715,8 @@
                     <div class="text">
 
                         <div class="right_triangle_deco"></div>
-                        <!-- <div class="right_triangle_deco2"></div> -->
                         <div class="up_triangle_deco"></div>
-                        <!-- <div class="down_triangle_deco"></div> -->
+                        <div class="down_triangle_deco"></div>
 
                         <div class="text_content">
                             <h6>brading design</h6>
