--- a/test.html
+++ b/test.html
@@ -10,7 +10,6 @@
 
     <link rel="stylesheet" href="reset_all.css">
     <link rel="stylesheet" href="test.css">
-    <!-- <link rel="stylesheet" href="MediaQueries.css"> -->
 
     <script src="test.js"></script>
 
@@ -22,15 +21,17 @@
 
     <header>
 
-        <!-- HMABURGER MENU -->
+        <!-- HAMBURGER MENU MOBILE ONLY-->
 
-        <div id="hamburguer_menu" class="hamburguer_menu clickable" onclick="hamburger_menu(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
+
 
         <div class="content">
+
+            <div id="hamburguer_menu" class="hamburguer_menu clickable" onclick="hamburger_menu(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
 
             <div class="section">
 
@@ -82,7 +83,7 @@
                         </li>
                         <li>
                             <h4>
-                                <a href="#price">
+                                <a href="#pricing">
                                     plans
                                 </a>
                             </h4>
@@ -104,8 +105,8 @@
 
                         <svg class="icon " viewBox="0 0 512 512">
                             <path d="M505,442.7L405.3,343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3,44-79.7,44-128C416,93.1,322.9,0,208,0S0,93.1,0,208                                        s93.1,208,208,208c48.3,0,92.7-16.4,128-44v16.3c0,6.4,2.5,12.5,7,17l99.7,99.7c9.4,9.4,24.6,9.4,33.9,0l28.3-28.3
-                            C514.3,467.3,514.3,452.1,505,442.7z M208,336c-70.7,0-128-57.2-128-128c0-70.7,57.2-128,128-128c70.7,0,128,57.2,128,128
-                                               C336,278.7,278.8,336,208,336z" />
+                        C514.3,467.3,514.3,452.1,505,442.7z M208,336c-70.7,0-128-57.2-128-128c0-70.7,57.2-128,128-128c70.7,0,128,57.2,128,128
+                                           C336,278.7,278.8,336,208,336z" />
                         </svg>
 
                     </div>
@@ -400,7 +401,7 @@
                             ultra services & the best support
                         </h4>
 
-                        <p>
+                        <p class="section">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic inventore adipisci aperiam
                             ipsum voluptatibus impedit eaque quod repellendus quo, laborum dolores et reprehenderit,
                             veritatis quia a accusamus laboriosam debitis vero. Lorem ipsum dolor sit amet consectetur
@@ -418,8 +419,6 @@
                 </div>
 
                 <div class="services">
-
-                    <!-- <div class="first_child"> -->
 
                     <div class="items">
                         <img class="icon" src="./icon/paperPlane.png" alt=" icon-paper-plane">
@@ -453,10 +452,7 @@
                                 piece.</p>
                         </div>
                     </div>
-                    <!-- </div> -->
 
-
-                    <!-- <div class="second_child"> -->
                     <div class="items">
                         <img class="icon" src="./icon/moon.png" alt="icon-moon">
 
@@ -625,13 +621,11 @@
 
                     <div class="pics_container">
 
-
                         <div id="client_pic1" class="pic_client client1 clickable" onmouseover="client1()"></div>
 
                         <div id="client_pic2" class="pic_client client2 clickable" onmouseover="client2()"></div>
 
                         <div id="client_pic3" class="pic_client client3 clickable" onmouseover="client3()"></div>
-
 
                     </div>
 
@@ -674,7 +668,7 @@
                         ?
                     </h6>
 
-                    <a class="button tostao_background" href="#price">
+                    <a class="button tostao_background" href="#pricing">
                         <h4>
                             get a quote
                         </h4>
@@ -715,8 +709,8 @@
                     <div class="text">
 
                         <div class="right_triangle_deco"></div>
-                        <div class="up_triangle_deco"></div>
-                        <div class="down_triangle_deco"></div>
+                        <!-- <div class="up_triangle_deco"></div> -->
+                        <!-- <div class="down_triangle_deco"></div> -->
 
                         <div class="text_content">
                             <h6>brading design</h6>
@@ -740,7 +734,6 @@
                         </div>
                     </div>
 
-
                     <div class="pics ">
                         <img src="./images/blog2.jpg" alt="">
 
@@ -748,8 +741,9 @@
 
                     <div class="text ">
                         <div class="right_triangle_deco"></div>
-                        <div class="up_triangle_deco"></div>
-                        <!-- <div class="down_triangle_deco"></div> -->
+                        <!-- <div class="up_triangle_deco"></div> -->
+
+
                         <div class="text_content">
                             <h6>brading design</h6>
 
@@ -782,8 +776,8 @@
 
                     <div class="text ">
                         <div class="left_triangle_deco"></div>
-                        <div class="up_triangle_deco"></div>
-                        <!-- <div class="down_triangle_deco"></div> -->
+                        <!-- <div class="up_triangle_deco"></div> -->
+
                         <div class="text_content">
                             <h6>brading design</h6>
 
@@ -812,8 +806,8 @@
 
                     <div class="text ">
                         <div class="left_triangle_deco"></div>
-                        <div class="up_triangle_deco"></div>
-                        <!-- <div class="down_triangle_deco"></div> -->
+                        <!-- <div class="up_triangle_deco"></div> -->
+
                         <div class="text_content">
                             <h6>brading design</h6>
 
@@ -840,11 +834,10 @@
 
             </div>
 
-
         </section>
 
         <!-- PRICING -->
-        <section id="price" class="price">
+        <section id="pricing" class="pricing">
 
             <div class="content">
 
@@ -1193,7 +1186,6 @@
                             </div>
                         </div>
 
-
                     </div>
 
                     <div class="data">
@@ -1257,8 +1249,6 @@
 
             </div>
 
-
-
         </section>
 
         <!-- OUR PARTNER -->
@@ -1317,7 +1307,6 @@
                         become a partner
                     </h4>
                 </a>
-
 
             </div>
 
@@ -1501,6 +1490,7 @@
 
         </div>
 
+
         <!--COPYRIGHT AND SOCIAL-->
         <footer>
 
@@ -1519,11 +1509,11 @@
 
                     <svg class="icon twitter clickable" id="Layer_1" viewBox="0 0 512 512">
                         <path d="M459.4,151.7c0.3,4.5,0.3,9.1,0.3,13.6c0,138.7-105.6,298.6-298.6,298.6c-59.5,0-114.7-17.2-161.1-47.1
-                            c8.4,1,16.6,1.3,25.3,1.3c49.1,0,94.2-16.6,130.3-44.8c-46.1-1-84.8-31.2-98.1-72.8c6.5,1,13,1.6,19.8,1.6c9.4,0,18.8-1.3,27.6-3.6
-                            c-48.1-9.7-84.1-52-84.1-103v-1.3c14,7.8,30.2,12.7,47.4,13.3c-28.3-18.8-46.8-51-46.8-87.4c0-19.5,5.2-37.4,14.3-53
-                            C87.4,130.9,165,172.5,252.1,177.1c-1.6-7.8-2.6-15.9-2.6-24c0-57.8,46.8-104.9,104.9-104.9c30.2,0,57.5,12.7,76.7,33.1
-                            c23.7-4.5,46.5-13.3,66.6-25.3c-7.8,24.4-24.4,44.8-46.1,57.8c21.1-2.3,41.6-8.1,60.4-16.2C497.7,118.3,479.8,136.8,459.4,151.7
-                            L459.4,151.7z" />
+                                c8.4,1,16.6,1.3,25.3,1.3c49.1,0,94.2-16.6,130.3-44.8c-46.1-1-84.8-31.2-98.1-72.8c6.5,1,13,1.6,19.8,1.6c9.4,0,18.8-1.3,27.6-3.6
+                                c-48.1-9.7-84.1-52-84.1-103v-1.3c14,7.8,30.2,12.7,47.4,13.3c-28.3-18.8-46.8-51-46.8-87.4c0-19.5,5.2-37.4,14.3-53
+                                C87.4,130.9,165,172.5,252.1,177.1c-1.6-7.8-2.6-15.9-2.6-24c0-57.8,46.8-104.9,104.9-104.9c30.2,0,57.5,12.7,76.7,33.1
+                                c23.7-4.5,46.5-13.3,66.6-25.3c-7.8,24.4-24.4,44.8-46.1,57.8c21.1-2.3,41.6-8.1,60.4-16.2C497.7,118.3,479.8,136.8,459.4,151.7
+                                L459.4,151.7z" />
                     </svg>
 
                     <svg class="icon dribble clickable" id="Layer_1" viewBox="0 0 512 512">
@@ -1546,38 +1536,49 @@
                             d="M497.68,219.33a216.74,216.74,0,0,1,4.19,42.61C501.87,408.27,403.73,512,256,512,114.55,512,0,397.45,0,256S114.55,0,256,0c69.15,0,126.78,25.15,171.48,67.06L358,133.76c-18.86-18.16-52-39.46-102-39.46C168.69,94.3,97.44,166.59,97.44,256S168.69,417.7,256,417.7c101.28,0,139.35-73,145.29-110.36H256v-88Zm247.21,8.58V153.6H670.22v74.31H595.91v74.67h74.31v74.31h74.67V302.58H819.2V227.91Z" />
                     </svg>
 
-
-
-
-
                 </div>
 
             </div>
-            <!-- ARROW UP -->
-            <svg id="arrowUp" class="arrowUp clickable" onclick="arrowUp()" viewBox="0 0 513 513">
-                <path class="arrow_background "
-                    d="M477.5.5H35.5a35,35,0,0,0-35,35v442a35,35,0,0,0,35,35h442a35,35,0,0,0,35-35h0V35.5A35,35,0,0,0,477.5.5Z" />
-                <path class="arrow_shape"
-                    d="M467.7,267.7l-22.2,22.2a24,24,0,0,1-33.94,0l-.36-.37L296.5,169.1V456.5a23.94,23.94,0,0,1-23.88,24H240.5a23.94,23.94,0,0,1-24-23.88V169.1L101.7,289.6a23.84,23.84,0,0,1-33.71,1L67.4,290,45.2,267.8a23.9,23.9,0,0,1-.1-33.8l.1-.1L239.5,39.5a23.9,23.9,0,0,1,33.8-.1l.1.1L467.7,233.8a23.9,23.9,0,0,1,.1,33.8Z" />
-            </svg>
+
         </footer>
+
+        <!-- ARROW UP -->
+        <!-- <svg id="arrowUp" class="arrowUp clickable" viewBox="0 0 513 513"> -->
+        <svg id="arrowUp" class="arrowUp clickable" onclick="arrowUp()" viewBox="0 0 513 513">
+            <path class="arrow_background "
+                d="M477.5.5H35.5a35,35,0,0,0-35,35v442a35,35,0,0,0,35,35h442a35,35,0,0,0,35-35h0V35.5A35,35,0,0,0,477.5.5Z" />
+            <path class="arrow_shape"
+                d="M467.7,267.7l-22.2,22.2a24,24,0,0,1-33.94,0l-.36-.37L296.5,169.1V456.5a23.94,23.94,0,0,1-23.88,24H240.5a23.94,23.94,0,0,1-24-23.88V169.1L101.7,289.6a23.84,23.84,0,0,1-33.71,1L67.4,290,45.2,267.8a23.9,23.9,0,0,1-.1-33.8l.1-.1L239.5,39.5a23.9,23.9,0,0,1,33.8-.1l.1.1L467.7,233.8a23.9,23.9,0,0,1,.1,33.8Z" />
+        </svg>
 
     </div>
 
-
     <!-- TEST TEST TEST  -->
-    <section class="display_none">
+    <!-- EDITABLE HTML -->
+    <!-- <section class="display_none"> -->
+    <section class="editable_html">
 
-        <br><br>
-        <button onclick="contentEditActivate()">Activate Edition</button>
-        <button onclick="contentEditDeActivate()">Deactivate Edition</button>
-        <br><br>
-        <p id="explanation">Here you will get the status of the editable content in this page, right now only as a test
-            notebook.</p>
-        <p>Notes</p>
-        <p id="editable">This is a paragraph. Edit it for your convenience.</p>
+        <div class="content">
 
-        <br><br>
+            <div class="icons">
+
+            </div>
+
+            <button onclick="contentEditActivate()">Activate Edition</button>
+            <button onclick="contentEditDeActivate()">Deactivate Edition</button>
+
+            <div class="text">
+
+                <p id="explanation">Here you will get the status of the editable content in this page, right now only as
+                    a
+                    test
+                    notebook.</p>
+                <p>Notes</p>
+                <p id="editable">Put here your notes...</p>
+            </div>
+
+        </div>
+
     </section>
 
 </body>
