local comnit : media querie for mobile ready ... hamburger menu wip

--- a/test.html
+++ b/test.html
@@ -23,8 +23,6 @@
 
         <!-- HAMBURGER MENU MOBILE ONLY-->
 
-
-
         <div class="content">
 
             <div id="hamburguer_menu" class="hamburguer_menu clickable" onclick="hamburger_menu(this)">
@@ -709,8 +707,7 @@
                     <div class="text">
 
                         <div class="right_triangle_deco"></div>
-                        <!-- <div class="up_triangle_deco"></div> -->
-                        <!-- <div class="down_triangle_deco"></div> -->
+                        <div class="up_triangle_deco"></div>
 
                         <div class="text_content">
                             <h6>brading design</h6>
@@ -741,7 +738,7 @@
 
                     <div class="text ">
                         <div class="right_triangle_deco"></div>
-                        <!-- <div class="up_triangle_deco"></div> -->
+                        <div class="up_triangle_deco"></div>
 
 
                         <div class="text_content">
@@ -776,7 +773,7 @@
 
                     <div class="text ">
                         <div class="left_triangle_deco"></div>
-                        <!-- <div class="up_triangle_deco"></div> -->
+                        <div class="up_triangle_deco"></div>
 
                         <div class="text_content">
                             <h6>brading design</h6>
@@ -806,7 +803,7 @@
 
                     <div class="text ">
                         <div class="left_triangle_deco"></div>
-                        <!-- <div class="up_triangle_deco"></div> -->
+                        <div class="up_triangle_deco"></div>
 
                         <div class="text_content">
                             <h6>brading design</h6>
@@ -869,7 +866,7 @@
                             </th>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>3 email accounts</td>
                         </tr>
 
@@ -885,7 +882,7 @@
                             </td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>1 domain name</td>
                         </tr>
 
@@ -899,11 +896,11 @@
                             </td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>5 mysql databases</td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>enhanced security</td>
                         </tr>
 
@@ -934,7 +931,7 @@
                             </th>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>5 email accounts</td>
                         </tr>
 
@@ -948,7 +945,7 @@
                             </td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>3 domain name</td>
                         </tr>
 
@@ -962,11 +959,11 @@
                             </td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>15 mysql databases</td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>enhanced security</td>
 
                         </tr>
@@ -998,7 +995,7 @@
                             </th>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>15 email accounts</td>
                         </tr>
 
@@ -1012,7 +1009,7 @@
                             </td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>10 domain name</td>
                         </tr>
 
@@ -1026,11 +1023,11 @@
                             </td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>50 mysql databases</td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>enhanced security</td>
 
                         </tr>
@@ -1062,7 +1059,7 @@
                             </th>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>unltd. email accounts</td>
                         </tr>
 
@@ -1077,7 +1074,7 @@
                                 </strong></td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>50 domain name</td>
                         </tr>
 
@@ -1093,11 +1090,11 @@
                             </td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>500 mysql databases</td>
                         </tr>
 
-                        <tr class="display_none">
+                        <tr class="display_none_mobile">
                             <td>enhanced security</td>
 
                         </tr>
@@ -1555,8 +1552,8 @@
 
     <!-- TEST TEST TEST  -->
     <!-- EDITABLE HTML -->
-    <!-- <section class="display_none"> -->
-    <section class="editable_html">
+    <!-- <section class="display_none_mobile"> -->
+    <section class="editable_html display_none_test">
 
         <div class="content">
 
