hamburger menu mvp

--- a/test.html
+++ b/test.html
@@ -25,10 +25,74 @@
 
         <div class="content">
 
-            <div id="hamburguer_menu" class="hamburguer_menu clickable" onclick="hamburger_menu(this)">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
+            <div class="hamburger_menu clickable" onclick="openNav()">
+                <h4>
+                    &#9776
+                </h4>
+            </div>
+
+            <div id="myNav" class="hamburger_menu_overlay">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <div class="overlay-content">
+                    <ul>
+                        <li>
+                            <h4>
+                                <a href="#welcome">
+                                    welcome
+                                </a>
+                            </h4>
+                        </li>
+                        <li>
+                            <h4>
+                                <a href="#ourWorks">
+                                    portfolio
+                                </a>
+                            </h4>
+                        </li>
+                        <li>
+                            <h4>
+                                <a href="#whyChooseUs">
+                                    why us
+                                </a>
+                            </h4>
+                        </li>
+                        <li>
+                            <h4>
+                                <a href="#team">
+                                    team
+                                </a>
+                            </h4>
+                        </li>
+                        <li>
+                            <h4>
+                                <a href="#clients">
+                                    clients
+                                </a>
+                            </h4>
+                        </li>
+                        <li>
+                            <h4>
+                                <a href="#blog">
+                                    blog
+                                </a>
+                            </h4>
+                        </li>
+                        <li>
+                            <h4>
+                                <a href="#pricing">
+                                    plans
+                                </a>
+                            </h4>
+                        </li>
+                        <li>
+                            <h4>
+                                <a href="#getInTouch">
+                                    get in touch
+                                </a>
+                            </h4>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
             <div class="section">
@@ -569,7 +633,7 @@
                         <article>
 
                             <h4>
-                                are yoU missing out ?
+                                are you missing out ?
                             </h4>
 
                             <p>
@@ -1552,8 +1616,7 @@
 
     <!-- TEST TEST TEST  -->
     <!-- EDITABLE HTML -->
-    <!-- <section class="display_none_mobile"> -->
-    <section class="editable_html display_none_test">
+    <section class="editable_html">
 
         <div class="content">
 
