welcome section completed

--- a/index.html
+++ b/index.html
@@ -13,193 +13,214 @@
 </head>
 
 <body>
+
+
+
     <header>
 
         <div class="content">
 
-            <div class=centered>
+            <!-- <div class=centered> -->
 
-                <div class="section">
+            <div class="headerSection">
 
-                    <nav>
-                        <a class="miniSection" href="https://zap.dylanon.com/" target="_blank">
-                            <img class="logo" src="./images/logoZapWhite.png" alt="image-logo">
-                        </a>
-
-                        <ul class="miniSection">
-                            <li>
-                                <a href="#welcome">
-                                    <h5>
-                                        welcome
-                                    </h5>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#ourWorks">
-                                    <h5>
-                                        portfolio
-                                    </h5>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#whyChooseUs">
-                                    <h5>
-                                        why us
-                                    </h5>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#team">
-                                    <h5>
-                                        team
-                                    </h5>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#clients">
-                                    <h5>
-                                        clients
-                                    </h5>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#blog">
-                                    <h5>
-                                        blog
-                                    </h5>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#pricing">
-                                    <h5>
-                                        plans
-                                    </h5>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#getInTouch">
-                                    <h5>
-                                        get in touch
-                                    </h5>
-                                </a>
-                            </li>
-                        </ul>
-
-                        <div class="ShoppinCartSearch miniSection">
-
-                            <svg class="icon " viewBox="0 0 576 512">
-                                <path
-                                    d="M528.1,301.3l47.3-208A24,24,0,0,0,552,64H159.2L150,19.2A23.9,23.9,0,0,0,126.5,0H24A23.94,23.94,0,0,0,0,24V40A23.94,23.94,0,0,0,24,64H93.9l70.2,343.4a56,56,0,1,0,67.1,8.6H440.8a56,56,0,1,0,63.6-10.4l5.5-24.3A24,24,0,0,0,486.5,352H218.1l-6.5-32H504.7A24.06,24.06,0,0,0,528.1,301.3Z" />
-                            </svg>
-
-                            <svg class="icon " viewBox="0 0 512 512">
-                                <path d="M505,442.7L405.3,343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3,44-79.7,44-128C416,93.1,322.9,0,208,0S0,93.1,0,208                                        s93.1,208,208,208c48.3,0,92.7-16.4,128-44v16.3c0,6.4,2.5,12.5,7,17l99.7,99.7c9.4,9.4,24.6,9.4,33.9,0l28.3-28.3
-                    C514.3,467.3,514.3,452.1,505,442.7z M208,336c-70.7,0-128-57.2-128-128c0-70.7,57.2-128,128-128c70.7,0,128,57.2,128,128
-                                       C336,278.7,278.8,336,208,336z" />
-                            </svg>
-
-                        </div>
-
-                    </nav>
-
-                </div>
-
-                <div class="section">
-                    <h2>We deliver</h2>
-                    <h1>Excellence</h1>
-                </div>
-
-                <div class="section sub_text">
-                    <h6>
-                        Creative Studio - Established in London (UK) since 1984
-                    </h6>
-                </div>
-
-                <div class="section">
-                    <a href="" class="enter" onclick="enter_alert()">
-                        <h6>Enter</h6>
+                <nav>
+                    <a class="" href="https://zap.dylanon.com/" target="_blank">
+                        <img class="logo" src="./images/logoZapWhite.png" alt="image-logo">
                     </a>
-                </div>
 
-                <div class="square left clickable">
-                </div>
+                    <ul class="">
+                        <li>
+                            <a href="#welcome">
+                                <h6>
+                                    welcome
+                                </h6>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#ourWorks">
+                                <h6>
+                                    portfolio
+                                </h6>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#whyChooseUs">
+                                <h6>
+                                    why us
+                                </h6>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#team">
+                                <h6>
+                                    team
+                                </h6>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#clients">
+                                <h6>
+                                    clients
+                                </h6>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#blog">
+                                <h6>
+                                    blog
+                                </h6>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#pricing">
+                                <h6>
+                                    plans
+                                </h6>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#getInTouch">
+                                <h6>
+                                    get in touch
+                                </h6>
+                            </a>
+                        </li>
+                    </ul>
 
-                <div class="square right clickable">
-                </div>
+                    <div class="ShoppinCartSearch ">
+                        <!-- shopping cart icon -->
+                        <svg class="icon " viewBox="0 0 576 512">
+                            <path
+                                d="M528.1,301.3l47.3-208A24,24,0,0,0,552,64H159.2L150,19.2A23.9,23.9,0,0,0,126.5,0H24A23.94,23.94,0,0,0,0,24V40A23.94,23.94,0,0,0,24,64H93.9l70.2,343.4a56,56,0,1,0,67.1,8.6H440.8a56,56,0,1,0,63.6-10.4l5.5-24.3A24,24,0,0,0,486.5,352H218.1l-6.5-32H504.7A24.06,24.06,0,0,0,528.1,301.3Z" />
+                        </svg>
+
+                        <!-- search icon -->
+                        <svg class="icon " viewBox="0 0 512 512">
+                            <path d="M505,442.7L405.3,343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3,44-79.7,44-128C416,93.1,322.9,0,208,0S0,93.1,0,208                                        s93.1,208,208,208c48.3,0,92.7-16.4,128-44v16.3c0,6.4,2.5,12.5,7,17l99.7,99.7c9.4,9.4,24.6,9.4,33.9,0l28.3-28.3
+                    C514.3,467.3,514.3,452.1,505,442.7z M208,336c-70.7,0-128-57.2-128-128c0-70.7,57.2-128,128-128c70.7,0,128,57.2,128,128
+                    C336,278.7,278.8,336,208,336z" />
+                        </svg>
+
+                    </div>
+
+                </nav>
+
             </div>
+
+            <div class="headerSection">
+                <h2>We deliver</h2>
+                <h1>Excellence</h1>
+            </div>
+
+            <div class="headerSection ">
+                <h5>
+                    Creative Studio - Established in London (UK) since 1984
+                </h5>
+            </div>
+
+            <div class="headerSection ">
+                <a class="enter clickable" onclick="enter_alert()">
+                    <h5>Enter</h5>
+                </a>
+            </div>
+
+            <div class="square left clickable">
+            </div>
+
+            <div class="square right clickable">
+            </div>
+            <!-- </div> -->
         </div>
 
     </header>
 
-    <!-- WELCOME -->
-    <section id="welcome" class="welcome">
+    <div class="main">
 
-        <div class="content">
+        <!-- WELCOME -->
+        <section id="welcome" class="welcome">
 
-            <aside>
-            </aside>
+            <div class="content">
 
-            <article>
+                <aside>
+                </aside>
 
-                <h6 class="section">
-                    Welcome to The ZAP - The Best Solution for a Creative Website
-                </h6>
+                <article>
 
-                <h4 class="section">
-                    awesome multi-concept theme
-                </h4>
+                    <h5 class="section">
+                        Welcome to The ZAP - The Best Solution for a Creative Website
+                    </h5>
 
-                <p class="section">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nemo. Suscipit in animi
-                    et
-                    quaerat commodi at, explicabo aliquid esse vero necessitatibus a molestiae harum architecto unde
-                    sapiente. Cupiditate, cum? Eum dolores mollitia reprehenderit vitae dolorem inventore magni
-                    quasi
-                    maxime nulla omnis error illo, est excepturi nemo rem obcaecati perspiciatis tempore dolor qui,
-                    sunt
-                    sed quam magnam repellat? Provident, labore!
-                </p>
+                    <h4 class="section">
+                        awesome multi-concept theme
+                    </h4>
 
-                <div class="info">
+                    <p class="section">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nemo. Suscipit in animi
+                        et
+                        quaerat commodi at, explicabo aliquid esse vero necessitatibus a molestiae harum architecto unde
+                        sapiente. Cupiditate, cum? Eum dolores mollitia reprehenderit vitae dolorem inventore magni
+                        quasi
+                        maxime nulla omnis error illo, est excepturi nemo rem obcaecati perspiciatis tempore dolor qui,
+                        sunt
+                        sed quam magnam repellat? Provident, labore!
+                    </p>
 
-                    <div class="info_item">
+                    <div class="info">
 
-                        <div class="icon gem"></div>
-                        <div class="text">
+                        <div class="item">
 
-                            <h4>unique design</h4>
+                            <div class="icon gem"></div>
+                            <div class="text">
 
+                                <h4>unique design</h4>
+
+                            </div>
+                        </div>
+
+                        <div class="item">
+
+                            <div class="icon camera"></div>
+                            <div class="text">
+
+                                <h4>photography</h4>
+
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div class="icon wand"></div>
+                            <div class="text">
+                                <h4>concept art</h4>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="info_item">
-
-                        <div class="icon camera"></div>
-                        <div class="text">
-
-                            <h4>photography</h4>
-
-                        </div>
+                    <div>
+                        <a href="" class="button">
+                            <h6>more services</h6>
+                        </a>
                     </div>
 
-                    <div class="info_item">
-                        <div class="icon wand"></div>
-                        <div class="text">
-                            <h4>concept art</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <a href="" class="button">
-                        <h4>more services</h4>
-                    </a>
-                </div>
+            </div>
 
             </article>
 
-        </div>
+    </div>
 
     </section>
+
+    </div>
+
+
+    <div class=" section refe">
+        <h1>hola mundo !h1</h1>
+        <h2>hola mundo !h2</h2>
+        <h3>hola mundo !h3</h3>
+        <h4>hola mundo !h4</h4>
+        <h5>hola mundo !h5</h5>
+        <h6>hola mundo !h6</h6>
+    </div>
+
 
 </body>
